# delocate

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .mypy.ini  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  Changelog  Changelog.md  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi-deploy.yml  python-linters.yml  python-package.yml  testing.yml
delocate/: __init__.py  _version.py  delocating.py  delocator.py  fuse.py  libsana.py  parse_macho_header.py  pkginfo.py  pycompat.py  tmpdirs.py  tools.py  wheeltools.py
delocate/cmd/: __init__.py  common.py  delocate_addplat.py  delocate_fuse.py  delocate_listdeps.py  delocate_merge.py  delocate_patch.py  delocate_path.py  delocate_wheel.py
delocate/osx/: tools.py
delocate/tests/: conftest.py  env_tools.py  pytest_tools.py  scriptrunner.py  test_delocate.py  test_delocating.py  test_foo.py  test_fuse.py  test_install_names.py  test_libsana.py  test_scripts.py  test_tmpdirs.py  test_tools.py  test_wheelies.py  test_wheeltools.py
delocate/tests/data/: .gitignore  a.lib  a.out  fakepkg1-1.0-cp27-cp27m-macosx_10_6_intel.whl  fakepkg1-1.0-cp27-none-macosx_10_6_intel.whl  fakepkg1-1.0-cp36-abi3-macosx_10_9_universal2.whl  fakepkg1-1.0-cp39-cp39-macosx_10_9_universal2.whl  fakepkg1-1.0-cp39-cp39-macosx_10_9_x86_64.whl  fakepkg2-1.0-py2-none-any.whl  fakepkg2-1.0-py27-none-any.whl  fakepkg2-1.0-py3-none-any.whl  fakepkg2.bad_patch  fakepkg2.patch  fakepkg_rpath-1.0-cp27-cp27m-macosx_10_6_intel.whl  fakepkg_rpath-1.0-cp36-abi3-macosx_10_9_universal2.whl  fakepkg_rpath-1.0-cp39-cp39-macosx_10_9_universal2.whl  fakepkg_rpath-1.0-cp39-cp39-macosx_10_9_x86_64.whl  liba.dylib  liba.exp  liba.lib  liba32.dylib  liba_both.dylib  libb.dylib  libb.exp  libb.lib  libc.dylib  libc.exp  libc.lib  libextfunc.dylib  libextfunc_rpath.dylib  make_libs.bat  make_libs.sh  some_code.py  test-lib  testing_osx_rpath_env_variables.sh  wheel_build_path.txt
delocate/tests/data_platform_tag/: liba.14.dylib  liba.6.dylib  liba.9.dylib  liba.dylib  liba32.14.dylib  liba32.6.dylib  liba32.9.dylib  liba_both.dylib  libb.14.dylib  libb.6.dylib  libb.9.dylib  libb.dylib  libc.14.dylib  libc.6.dylib  libc.9.1.dylib  libc.9.dylib  libc.dylib  make_libs.sh  test-lib
delocate/tools/: __init__.py  common.py  osx.py  win32.py
delocate/win32/: tools.py
doc/: links_names.inc
doc/devel/: make_release.rst
scripts/: delocate-addplat  delocate-fuse  delocate-listdeps  delocate-patch  delocate-path  delocate-wheel
tools/: README.rst  build_release_files.sh  travis_install.sh  travis_test.sh
wheel_makers/: .gitignore  make_wheels.sh
wheel_makers/fakepkg1/: .gitignore  setup.py
wheel_makers/fakepkg1/fakepkg1/: __init__.py  ascript  module1.py
wheel_makers/fakepkg1/fakepkg1/subpkg/: module2.c
wheel_makers/fakepkg1/fakepkg1/tests/: test_fakepkg.py
wheel_makers/fakepkg1/scripts/: fakescript.py
wheel_makers/fakepkg2/: .gitignore  setup.py
wheel_makers/fakepkg2/fakepkg2/: module1.py
wheel_makers/fakepkg2/fakepkg2/subpkg/: __init__.py  module2.py
wheel_makers/fakepkg_namespace/: README.md  setup.py
wheel_makers/fakepkg_namespace/libs/: extfunc2.c
wheel_makers/fakepkg_namespace/namespace/subpkg/: __init__.py  module2.c
wheel_makers/fakepkg_namespace/namespace/subpkg/tests/: test_fakepkg.py
wheel_makers/fakepkg_rpath/: .gitignore  setup.py
wheel_makers/fakepkg_rpath/fakepkg/: module1.py
wheel_makers/fakepkg_rpath/fakepkg/subpkg/: module2.c  module2.pyx
wheel_makers/fakepkg_rpath/fakepkg/tests/: test_fakepkg.py
wheel_makers/fakepkg_rpath/libs/: extfunc.c
wheel_makers/fakepkg_toplevel/: README.md  setup.py  test_fakepkg_toplevel.py
