[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "delocate"
dynamic = ["version"]
description = "Move macOS dynamic libraries into package"
authors = [{ name = "Matthew Brett", email = "matthew.brett@gmail.com" }]
maintainers = [
    { name = "Matthew Brett", email = "matthew.brett@gmail.com" },
    { name = "Kyle Benesch", email = "4b796c65+github@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["packaging>=20.9", "typing_extensions>=4.12.2", "macholib"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.scripts]
delocate-addplat = "delocate.cmd.delocate_addplat:main"
delocate-fuse = "delocate.cmd.delocate_fuse:main"
delocate-listdeps = "delocate.cmd.delocate_listdeps:main"
delocate-merge = "delocate.cmd.delocate_merge:main"
delocate-patch = "delocate.cmd.delocate_patch:main"
delocate-path = "delocate.cmd.delocate_path:main"
delocate-wheel = "delocate.cmd.delocate_wheel:main"

[project.urls]
Homepage = "http://github.com/matthew-brett/delocate"

[tool.setuptools_scm]
write_to = "delocate/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = ["pytest-console-scripts>=1.4.0", "pytest-cov"]
testpaths = ["delocate/"]
addopts = ["--doctest-modules", "--cov=delocate", "--cov-config=pyproject.toml"]
log_file_level = "DEBUG"


[tool.coverage.run]
# Exclude files from coverage
omit = ["*/_version.py", "*/tests/*"]


[tool.mypy]
files = ["*.py", "delocate"]
python_version = "3.9"

[[tool.mypy.overrides]] # Ignore delocate._version module.
module = "delocate._version"
ignore_errors = true
ignore_missing_imports = true


[tool.ruff]
line-length = 80

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "UP", # pyupgrade
    "FA", # flake8-future-annotations
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D103"] # Docstrings not required for test functions

[tool.ruff.lint.pydocstyle]
convention = "numpy"
